bk_ida/gccida/g2/simplify_giv_expr
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6859:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v8; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6866:4: error: expected ';' after expression
rtx v15; // r8 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6866:5: error: use of undeclared identifier 'v15'
rtx v15; // r8 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6868:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6868:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6872:4: error: expected ';' after expression
rtx v21; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6872:5: error: use of undeclared identifier 'v21'
rtx v21; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6879:4: error: expected ';' after expression
rtx v28; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6879:5: error: use of undeclared identifier 'v28'
rtx v28; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6880:4: error: expected ';' after expression
rtx v29; // r9 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6880:5: error: use of undeclared identifier 'v29'
rtx v29; // r9 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6890:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v39; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6891:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v40; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6907:4: error: expected ';' after expression
rtx v56; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6907:5: error: use of undeclared identifier 'v56'
rtx v56; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6910:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v59; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6911:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v60; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6913:4: error: expected ';' after expression
rtx v62; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/loop.c:6913:5: error: use of undeclared identifier 'v62'
rtx v62; // rax 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/simplify_giv_expr/src/obj/loop.o] Error 1
